@@ -8,6 +8,9 @@
 
 
 Daniel (11 January 2005)
+- Dan Torop cleaned up a few no longer used variables from David Phillips'
+  select() overhaul fix.
+
 - Cyrill Osterwalder posted a detailed analysis about a bug that occurs when
   using a custom Host: header and curl fails to send a request on a re-used
   persistent connection and thus creates a new connection and resends it. It
